# trailcache

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  openapi.yaml
.github/workflows/: release-gui.yml  release.yml
crates/trailcache-core/: Cargo.toml
crates/trailcache-core/bindings/: Commissioner.ts  Key3Leaders.ts  OrgProfile.ts  Patrol.ts  UnitContact.ts  UnitInfo.ts
crates/trailcache-core/src/: config.rs  lib.rs
crates/trailcache-core/src/api/: client.rs  error.rs  mod.rs
crates/trailcache-core/src/auth/: credentials.rs
crates/trailcache-core/src/cache/: fetch.rs  manager.rs  mod.rs  offline.rs  refresh.rs
crates/trailcache-core/src/models/: advancement.rs  event.rs  mod.rs  organization.rs  person.rs  pivot.rs  sorting.rs  stats.rs  unit.rs
crates/trailcache-core/src/utils/: format.rs  mod.rs
crates/trailcache-gui/: package-lock.json  package.json  vite.config.ts
crates/trailcache-gui/src/: app.html
crates/trailcache-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/trailcache-gui/src-tauri/bindings/: AdultDisplay.ts  BadgePivotEntry.ts  BadgePivotScout.ts  EventDisplay.ts  EventGuestDisplay.ts  MeritBadgeRequirementDisplay.ts  ParentDisplay.ts  RankPivotEntry.ts  YouthDisplay.ts
crates/trailcache-gui/src-tauri/capabilities/: desktop.json
crates/trailcache-gui/src-tauri/icons/: icon.icns
crates/trailcache-gui/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs  state.rs
crates/trailcache-gui/src/lib/: api.ts
crates/trailcache-gui/src/lib/bindings/: AdultDisplay.ts  AwardDisplay.ts  BadgePivotScout.ts  BadgeRequirementsResponseDisplay.ts  BadgeSummary.ts  CacheAges.ts  EventGuestDisplay.ts  Leader.ts  LeadershipDisplay.ts  MeetingLocation.ts  MeritBadgeDisplay.ts  Patrol.ts  RankPivotScout.ts  RankProgressDisplay.ts  RankRequirementDisplay.ts  UnitInfo.ts  YouthBadgesResponse.ts  YouthDisplay.ts  index.ts
crates/trailcache-gui/src/routes/: +layout.svelte  +page.svelte
crates/trailcache-tui/: Cargo.toml
crates/trailcache-tui/src/: app.rs  main.rs
crates/trailcache-tui/src/ui/: input.rs  mod.rs  render.rs  styles.rs
crates/trailcache-tui/src/ui/tabs/: advancement.rs  badges.rs  events.rs  mod.rs  patrols.rs  ranks.rs  roster.rs  unit.rs
scripts/: generate_summaries.py
src/: app.rs  config.rs  main.rs  summaries.rs
src/api/: client.rs  error.rs
src/auth/: credentials.rs  mod.rs  session.rs
src/cache/: manager.rs  mod.rs
src/models/: advancement.rs  event.rs  mod.rs  organization.rs  person.rs  unit.rs
src/ui/: input.rs  render.rs  styles.rs
src/ui/tabs/: advancement.rs  badges.rs  events.rs  mod.rs  patrols.rs  ranks.rs  roster.rs  troop.rs  unit.rs
src/utils/: format.rs  mod.rs
