[package]
name = "scoutbook88"
version = "0.1.4"
edition = "2021"
description = "A blazing-fast TUI for Scoutbook data"
authors = ["David LaPorte"]
repository = "https://github.com/dlaporte/scoutbook88"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime (only features we need for smaller binary)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure credential storage
keyring = "3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
futures = "0.3"

# Directories for cache location
dirs = "5"

# Environment file support
dotenvy = "0.15"

# Password input
rpassword = "7"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
