[workspace]
members = [
    "crates/trailcache-core",
    "crates/trailcache-tui",
    "crates/trailcache-gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["David LaPorte"]
repository = "https://github.com/dlaporte/trailcache"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# HTTP client (rustls-tls for mobile compatibility)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure credential storage
keyring = "3"

# Encryption
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
futures = "0.3"

# Directories for cache location
dirs = "5"

# Environment file support
dotenvy = "0.15"

# TypeScript type generation
ts-rs = "10"

# The profile that 'dist' will build with
[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
lto = "thin"
