[package]
name = "trailcache-core"
description = "Core library for trailcache - API client, models, cache, auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
keyring = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
ts-rs = { workspace = true, optional = true }

[features]
default = []
ts = ["dep:ts-rs"]
