[package]
name = "trailcache-gui"
version = "0.2.12"
description = "Trailcache GUI - cross-platform Scout troop management"
authors = ["David LaPorte"]
license = "MIT"
repository = "https://github.com/dlaporte/trailcache"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "trailcache_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
trailcache-core = { path = "../../trailcache-core", version = "0.2.12", features = ["ts"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { workspace = true }
chrono.workspace = true

[target.'cfg(not(target_os = "ios"))'.dependencies]
tauri-plugin-window-state = "2"
